@@ -20,12 +20,15 @@ package org.apache.plc4x.java.ads.tag;
 
 import org.apache.plc4x.java.api.exceptions.PlcInvalidTagException;
 import org.apache.plc4x.java.api.model.ArrayInfo;
+import org.apache.plc4x.java.spi.drivers.model.AddressConstraints;
+import org.apache.plc4x.java.spi.drivers.model.ArrayNotationParser;
 import org.apache.plc4x.java.api.types.PlcValueType;
 import org.apache.plc4x.java.spi.buffers.api.WithOption;
 import org.apache.plc4x.java.spi.buffers.api.exceptions.BufferException;
 import org.apache.plc4x.java.spi.buffers.api.WriteBuffer;
 
 import java.nio.charset.StandardCharsets;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.regex.Matcher;
@@ -38,6 +41,26 @@ public class SymbolicAdsTag implements AdsTag {
 
     private static final Pattern SYMBOLIC_ADDRESS_PATTERN = Pattern.compile(
         "^(?<symbolicAddress>[a-zA-Z_]\\w*(\\[\\d+\\])*(\\.[a-zA-Z_]\\w*(\\[\\d+\\])*)*)(\\|(?<stringEncoding>[a-zA-Z0-9_-]+))?$");
+
+    /**
+     * YOFC's optional trailing "|encoding" suffix. It is matched on its own because both
+     * {@code addressPart()} and {@code expressionPart()} anchor their expression at the end of
+     * the string, so a suffix left in place hides the selection behind it.
+     */
+    private static final Pattern STRING_ENCODING_SUFFIX_PATTERN =
+        Pattern.compile("\\|(?<stringEncoding>[a-zA-Z0-9_-]+)$");
+
+    /**
+     * A range has to be contiguous to be one read. Only the last dimension of the trailing
+     * selection may span more than one element: "a[1].b[2..5]" is one run of a single
+     * sub-structure, while "a[1..3].b" would be member b of three separate elements and
+     * "a[1..3][2]" a strided slice - neither of which any single request can fetch.
+     *
+     * <p>An interior range is already refused by the symbolic path pattern, which accepts only
+     * bare indices between the dots.
+     */
+    private static final AddressConstraints CONSTRAINTS =
+        AddressConstraints.UNCONSTRAINED.withOnlyTrailingDimensionMayBeRange(true);
 
     private final String symbolicAddress;
 
@@ -59,18 +82,61 @@ public class SymbolicAdsTag implements AdsTag {
     }
 
     public static SymbolicAdsTag of(String address) {
-        Matcher matcher = SYMBOLIC_ADDRESS_PATTERN.matcher(address);
-        if (!matcher.matches()) {
+        // A trailing bracket run is the selection; everything before it is the symbolic path.
+        // Splitting first is what lets the last segment carry a range - the per-segment group in
+        // SYMBOLIC_ADDRESS_PATTERN would otherwise swallow a bare trailing index.
+        Matcher encodingMatcher = STRING_ENCODING_SUFFIX_PATTERN.matcher(address);
+        String stringEncoding = null;
+        String bareAddress = address;
+        if (encodingMatcher.find()) {
+            stringEncoding = encodingMatcher.group("stringEncoding");
+            bareAddress = address.substring(0, encodingMatcher.start());
+        }
+        String path = ArrayNotationParser.addressPart(bareAddress);
+        if (!SYMBOLIC_ADDRESS_PATTERN.matcher(path).matches()) {
             throw new PlcInvalidTagException(address, SYMBOLIC_ADDRESS_PATTERN, "{address}");
         }
-        String stringEncoding = matcher.group("stringEncoding");
-        String symbolicAddress = matcher.group("symbolicAddress");
-
-        return new SymbolicAdsTag(symbolicAddress, null, List.of(), stringEncoding);
+        String expression = ArrayNotationParser.expressionPart(bareAddress);
+        List<ArrayInfo> selection = expression.isEmpty()
+            ? Collections.emptyList()
+            : ArrayNotationParser.parse(expression, bareAddress, CONSTRAINTS);
+        return new SymbolicAdsTag(bareAddress, null, selection, stringEncoding);
     }
 
     public static boolean matches(String address) {
-        return SYMBOLIC_ADDRESS_PATTERN.matcher(address).matches();
+        Matcher encodingMatcher = STRING_ENCODING_SUFFIX_PATTERN.matcher(address);
+        String bareAddress = encodingMatcher.find() ? address.substring(0, encodingMatcher.start()) : address;
+        return SYMBOLIC_ADDRESS_PATTERN.matcher(ArrayNotationParser.addressPart(bareAddress)).matches();
+    }
+
+    /**
+     * The selection the address states, or an empty list where it states none. Derived from the
+     * address rather than from the constructor, because a tag built directly - as the driver does
+     * when it browses the symbol table - carries the variable's declared shape in its arrayInfo,
+     * not the user's selection.
+     *
+     * <p>Distinct from {@link #getArrayInfo()}, which describes the shape of the value the caller
+     * receives.
+     */
+    public List<ArrayInfo> getSelection() {
+        String expression = ArrayNotationParser.expressionPart(symbolicAddress);
+        return expression.isEmpty()
+            ? Collections.emptyList()
+            : ArrayNotationParser.parse(expression, symbolicAddress, CONSTRAINTS);
+    }
+
+    /**
+     * The declared lower bound the address states for its trailing dimension, or {@code null}
+     * where it states none. The device's own declaration is authoritative; this is the user's
+     * statement of intent, to be checked against it when the symbol is resolved.
+     */
+    public Integer getDeclaredBase() {
+        String expression = ArrayNotationParser.expressionPart(symbolicAddress);
+        if (expression.isEmpty() || !expression.contains(";")) {
+            return null;
+        }
+        List<ArrayInfo> dimensions = ArrayNotationParser.parse(expression, symbolicAddress);
+        return dimensions.get(dimensions.size() - 1).getBase();
     }
 
     public String getSymbolicAddress() {
@@ -100,8 +166,18 @@ public class SymbolicAdsTag implements AdsTag {
         return dataType;
     }
 
+    /**
+     * The shape of the value the caller receives: empty for a scalar, one entry per dimension
+     * for an array. A bare index selects one element and so reports empty; a range reports its
+     * dimensions. Where the address states no selection at all, the driver fills this in from
+     * the symbol table so a bare array address reports the whole declared array.
+     */
     @Override
     public List<ArrayInfo> getArrayInfo() {
+        if (ArrayNotationParser.selectsSingleElement(
+                ArrayNotationParser.expressionPart(symbolicAddress))) {
+            return Collections.emptyList();
+        }
         return arrayInfo;
     }
 
